// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormPost renders the form post with values 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form>
        <div
          class="form-group"
        >
          <label>
            Title
          </label>
          <input
            class="form-control"
            name="title"
            value="title"
          />
        </div>
        <div
          class="form-group"
        >
          <label>
            Content
          </label>
          <input
            class="form-control"
            name="content"
            value="content"
          />
        </div>
        <div
          class="form-group"
        >
          <label>
            Latitude
          </label>
          <input
            class="form-control"
            name="lat"
            value="lat"
          />
        </div>
        <div
          class="form-group"
        >
          <label>
            Longitude
          </label>
          <input
            class="form-control"
            name="long"
            value="long"
          />
        </div>
        <div
          class="form-group"
        >
          <label>
            Image url
          </label>
          <input
            class="form-control"
            name="image_url"
            value="image_url"
          />
        </div>
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="col-11"
            >
              <button
                class="btn btn-secondary"
                type="button"
              >
                Back
              </button>
            </div>
            <div
              class="col-1"
            >
              <button
                class="btn btn-primary"
                type="button"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form>
      <div
        class="form-group"
      >
        <label>
          Title
        </label>
        <input
          class="form-control"
          name="title"
          value="title"
        />
      </div>
      <div
        class="form-group"
      >
        <label>
          Content
        </label>
        <input
          class="form-control"
          name="content"
          value="content"
        />
      </div>
      <div
        class="form-group"
      >
        <label>
          Latitude
        </label>
        <input
          class="form-control"
          name="lat"
          value="lat"
        />
      </div>
      <div
        class="form-group"
      >
        <label>
          Longitude
        </label>
        <input
          class="form-control"
          name="long"
          value="long"
        />
      </div>
      <div
        class="form-group"
      >
        <label>
          Image url
        </label>
        <input
          class="form-control"
          name="image_url"
          value="image_url"
        />
      </div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-11"
          >
            <button
              class="btn btn-secondary"
              type="button"
            >
              Back
            </button>
          </div>
          <div
            class="col-1"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              Submit
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FormPost renders the form post without values and submit disabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form>
        <div
          class="form-group"
        >
          <label>
            Title
          </label>
          <input
            class="form-control"
            name="title"
            value=""
          />
        </div>
        <div
          class="form-group"
        >
          <label>
            Content
          </label>
          <input
            class="form-control"
            name="content"
            value=""
          />
        </div>
        <div
          class="form-group"
        >
          <label>
            Latitude
          </label>
          <input
            class="form-control"
            name="lat"
            value=""
          />
        </div>
        <div
          class="form-group"
        >
          <label>
            Longitude
          </label>
          <input
            class="form-control"
            name="long"
            value=""
          />
        </div>
        <div
          class="form-group"
        >
          <label>
            Image url
          </label>
          <input
            class="form-control"
            name="image_url"
            value=""
          />
        </div>
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="col-11"
            >
              <button
                class="btn btn-secondary"
                type="button"
              >
                Back
              </button>
            </div>
            <div
              class="col-1"
            >
              <button
                class="btn btn-primary"
                disabled=""
                type="button"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form>
      <div
        class="form-group"
      >
        <label>
          Title
        </label>
        <input
          class="form-control"
          name="title"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label>
          Content
        </label>
        <input
          class="form-control"
          name="content"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label>
          Latitude
        </label>
        <input
          class="form-control"
          name="lat"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label>
          Longitude
        </label>
        <input
          class="form-control"
          name="long"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label>
          Image url
        </label>
        <input
          class="form-control"
          name="image_url"
          value=""
        />
      </div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-11"
          >
            <button
              class="btn btn-secondary"
              type="button"
            >
              Back
            </button>
          </div>
          <div
            class="col-1"
          >
            <button
              class="btn btn-primary"
              disabled=""
              type="button"
            >
              Submit
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
